--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
+    <!--<color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
+    <color name="teal_700">#FF018786</color>-->
+    <color name="colorOnPrimary">@color/white</color>
+    <color name="colorOnSecondary">@color/light_blue_800_dark</color>
+
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="colorAcent">#E42762</color>
+
+    <color name="blue_gray_800_light">#62727b</color>
+    <color name="blue_gray_800">#37474f</color>
+    <color name="blue_gray_800_dark">#102027</color>
+    
+    <color name="yellow_a400">#ffea00</color>
+    <color name="yellow_a400_dark">#c7b800</color>
+    
+    <color name="light_blue_800_dark">#004c8c</color>
 </resources>
