--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,4 +20,5 @@
     <color name="yellow_a400_dark">#c7b800</color>
     
     <color name="light_blue_800_dark">#004c8c</color>
+    <color name="gray_100">#f5f5f5</color>
 </resources>
