--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,5 @@
 <resources>
     <dimen name="common_padding_min">8dp</dimen>
     <dimen name="product_img_width">148dp</dimen>
+    <dimen name="common_padding_default">16dp</dimen>
 </resources>
