--- a/app/src/main/res/layout/fragment_dialog_add.xml
+++ b/app/src/main/res/layout/fragment_dialog_add.xml
@@ -82,4 +82,27 @@
             android:inputType="numberDecimal"/>
     </com.google.android.material.textfield.TextInputLayout>
 
+    <ImageView
+        android:id="@+id/imgProductPreview"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="@color/gray_100"
+        android:layout_marginTop="@dimen/common_padding_min"
+        android:layout_marginEnd="@dimen/common_padding_min"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="@id/guideline"
+        app:layout_constraintTop_toBottomOf="@id/tilQuantity"
+        app:layout_constraintDimensionRatio="16:9"/>
+
+    <ImageButton
+        android:id="@+id/ibProduct"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:src="@drawable/ic_image_search"
+        android:background="?attr/selectableItemBackground"
+        app:layout_constraintStart_toStartOf="@id/imgProductPreview"
+        app:layout_constraintEnd_toEndOf="@id/imgProductPreview"
+        app:layout_constraintTop_toTopOf="@id/imgProductPreview"
+        app:layout_constraintBottom_toBottomOf="@id/imgProductPreview"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
