Barra de progreso

--- a/app/src/main/res/layout/fragment_dialog_add.xml
+++ b/app/src/main/res/layout/fragment_dialog_add.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:padding="@dimen/common_padding_default">
 
     <com.google.android.material.textfield.TextInputLayout
@@ -104,5 +105,26 @@
         app:layout_constraintEnd_toEndOf="@id/imgProductPreview"
         app:layout_constraintTop_toTopOf="@id/imgProductPreview"
         app:layout_constraintBottom_toBottomOf="@id/imgProductPreview"/>
+
+    <com.google.android.material.progressindicator.LinearProgressIndicator
+        android:id="@+id/progressBar"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        tools:visibility="visible"
+        tools:progress="75"
+        app:layout_constraintStart_toStartOf="@id/tilPrice"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@id/imgProductPreview"/>
+
+    <MultiAutoCompleteTextView
+        android:id="@+id/tvProgress"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/common_padding_min"
+        tools:text="Subiendo... 75%"
+        app:layout_constraintStart_toStartOf="@id/progressBar"
+        app:layout_constraintEnd_toEndOf="@id/progressBar"
+        app:layout_constraintTop_toTopOf="@id/progressBar"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
